[package]
name = "tiny_die"
version = "0.2.2"
authors = ["Alec Burgdorf <aeburgd@gmail.com>"]
edition = "2018"
publish = ["crates-io"]
description = "A tiny lib crate for tiny dice."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aburgd/rpg"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
